# gcp-microservices-cloud-portfolioP1

./: .pre-commit-config.yaml  README.md  docker-compose.yml  document.txt  pyproject.toml
.github/workflows/: deploy.yml  pr-checks.yml
k8s/: hpa.yaml  network-policy.yaml  order-service-sa.yaml  workloads.yaml
scripts/: destroy.ps1  destroy.sh
src/inventory-service/: .dockerignore  Dockerfile  config.py  inventory_repo.py  main.py  metrics.py  requirements.txt  schemas.py
src/inventory-service/tests/: conftest.py  test_inventory.py
src/order-service/: .gitignore  Dockerfile  auth.py  config.py  main.py  metrics.py  order_repo.py  requirements.txt  schemas.py
src/order-service/tests/: conftest.py  test_orders.py
src/order-service/tests/integration/: test_order_flow.py
terraform/: backend.tf  gke.tf  iam.tf  registry.tf  storage.tf  terraform.tfvars  variables.tf  vpc.tf
