[project]
name = "gcp-microservices-cloud-portfolio"
version = "1.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = [
    "src/inventory-service/tests",
    "src/order-service/tests",
]
pythonpath = [
    "src/inventory-service",
    "src/order-service",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
